--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -3,7 +3,7 @@
 <form method="POST" action="/authors">
   <div class="form-group">
     <label for="name">Name:</label>
-    <input type="text" name="name" placeholder="What is your full name?" class="form-control">
+    <input type="text" name="name" placeholder="What is your full name?" class="form-control" required>
   </div>
   <div class="form-group">
     <label for="name">Profile Image:</label>
@@ -11,7 +11,7 @@
   </div>
   <div class="form-group">
     <label for="name">Bio:</label>
-    <textarea name="bio" class="form-control"></textarea>
+    <textarea name="bio" class="form-control" required></textarea>
   </div>
   <input type="submit" value="Register Author" class="btn btn-success">
 </form>
