--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -23,5 +23,9 @@
     <label for="name">Content:</label>
     <textarea name="content" class="form-control" required></textarea>
   </div>
+  <div class="form-group">
+    <label for='tags'>Tags:</label>
+    <input type="text" name="tags" class="form-control placeholderTag topics! Separate by commas!">
+  </div>
   <input type="submit" value="Post Article" class="btn btn-primary">
 </form>
